--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -81,6 +81,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 /* HEADINGS */
